packages/pro/tree/style/index.less
@import '../../style/variable/index.less';
@import '../../../components/style/variable/index.less';
@import '../../style/mixins/reset.less';
@import './variables.less';

.@{pro-tree-prefix} {
  .reset-component();

  border: @pro-tree-border;
  padding: @pro-tree-padding;
  width: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  transition: width var(--ix-motion-duration-medium) var(--ix-motion-ease-in-out);

  &-header-wrapper,
  &-search-wrapper {
    display: flex;
    align-items: center;
    gap: @pro-tree-header-search-wrapper-gap;
    padding: @pro-tree-header-search-wrapper-vertical-spacing @pro-tree-header-search-wrapper-horizontal-spacing;
  }

  &-search-wrapper {
    margin-bottom: @pro-tree-search-wrapper-margin-bottom;
    .@{input-prefix}-suffix {
      color: @pro-tree-search-input-suffix-color;
    }
  }

  &-header-wrapper {
    min-height: 40px;

    .@{icon-prefix} {
      font-size: @pro-tree-header-wrapper-icon-font-size;
      line-height: calc(@pro-tree-header-wrapper-icon-font-size + var(--ix-line-height-gutter));
      flex: auto;
      cursor: pointer;
      display: inline-block;
      position: relative;
      top: 2px;
      text-align: end;
      &:hover {
        color: @pro-tree-header-wrapper-icon-hover-color;
      }
    }

    & + .@{divider-prefix} {
      margin: @pro-tree-divider-vertical-spacing @pro-tree-divider-horizontal-spacing;
      width: calc(100% - @pro-tree-divider-horizontal-spacing * 2);
      min-width: calc(100% - @pro-tree-divider-horizontal-spacing * 2);
    }
  }

  .@{tree-prefix} {
    flex: 1;
    height: 0;
    padding: @pro-tree-content-vertical-spacing @pro-tree-content-horizontal-spacing;

    &.@{tree-prefix}-blocked {
      .@{tree-prefix}-node {
        padding: @pro-tree-node-padding;
      }
    }
  }

  &-collapsed {
    .@{pro-tree-prefix} {
      &-header-wrapper {
        .@{header-prefix} {
          display: none;
        }
      }

      &-search-wrapper {
        opacity: 0;
      }
    }

    .@{tree-prefix} {
      opacity: 0;
    }
  }
}

